# PSVitaRebootShutdown

./: CMakeLists.txt  LICENSE  README.md  RebootShutdown.vpk
source/: main.c  touch.c
source/sce_sys/livearea/contents/: template.xml
src/: CMakeLists.txt  main.c
src/sce_sys/livearea/contents/: template.xml
